Fix masonry alignment and image attributes

--- a/kbwear-next/app/styles/samples.css
+++ b/kbwear-next/app/styles/samples.css
@@ -12,6 +12,7 @@
     margin-bottom: 35px;
     width: 100%;
     display: inline-block;
+    vertical-align: top;
 }
 
 @media (max-width: 768px) {
